@@ -216,7 +216,6 @@ typedef uint32_t SerdNodeFlags;
 typedef struct {
 	const uint8_t* buf;      /**< Value string */
 	size_t         n_bytes;  /**< Size in bytes (not including null) */
-	size_t         n_chars;  /**< Length in characters (not including null)*/
 	SerdNodeFlags  flags;    /**< Node flags (e.g. string properties) */
 	SerdType       type;     /**< Node type */
 } SerdNode;
@@ -306,14 +305,13 @@ serd_strerror(SerdStatus status);
 
 /**
    Measure a UTF-8 string.
-   @return Length of `str` in characters (except NULL).
+   @return Length of `str` in bytes.
    @param str A null-terminated UTF-8 string.
-   @param n_bytes (Output) Set to the size of `str` in bytes (except NULL).
    @param flags (Output) Set to the applicable flags.
 */
 SERD_API
 size_t
-serd_strlen(const uint8_t* str, size_t* n_bytes, SerdNodeFlags* flags);
+serd_strlen(const uint8_t* str, SerdNodeFlags* flags);
 
 /**
    Parse a string to a double.
@@ -461,7 +459,7 @@ serd_uri_serialise_relative(const SerdURI* uri,
    @{
 */
 
-static const SerdNode SERD_NODE_NULL = { NULL, 0, 0, 0, SERD_NOTHING };
+static const SerdNode SERD_NODE_NULL = { NULL, 0, 0, SERD_NOTHING };
 
 /**
    Make a (shallow) node from `str`.
